fix spacing

--- a/frontend/src/styles/Homepage.scss
+++ b/frontend/src/styles/Homepage.scss
@@ -29,6 +29,7 @@ $color-button-text: #FFF1ED;
     .homepage-label {
       color: #FFF1ED;
       margin-bottom: 10px;
+      width: 345px
     }
 
     .homepage-input {
